front end changes and optimizations

--- a/assets/scss/theme/_style.scss
+++ b/assets/scss/theme/_style.scss
@@ -7037,7 +7037,7 @@ i {
   font-size: 12px;
   line-height: 14px;
   font-weight: 600;
-  top: 20%;
+  top: -9px;
   right: -8px;
   padding: 3px;
 }
